<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="com.silverbullet.asteroidsradar.model.Asteroid" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="18dp"
            app:layout_constraintDimensionRatio="H,3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:isAsteroidHazardous="@{asteroid.isPotentiallyHazardous}"
                tools:ignore="ContentDescription"
                tools:src="@drawable/asteroid_hazardous" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.MaterialComponents.Headline5.DataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_approach_data"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/text_close_approach_data"
            style="@style/TextAppearance.MaterialComponents.Subtitle1.Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{asteroid.closeApproachDate}"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="2022-07-24" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.MaterialComponents.Headline5.DataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absolute_magnitude"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/text_close_approach_data" />

        <TextView
            android:id="@+id/text_absolute_magnitude"
            style="@style/TextAppearance.MaterialComponents.Subtitle1.Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:absoluteMagnitude="@{asteroid.absoluteMagnitude}"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="22.22222 au" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.MaterialComponents.Headline5.DataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimated_diameter"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/text_absolute_magnitude" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.MaterialComponents.Subtitle1.Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:estimatedDiameter="@{asteroid.estimatedDiameter}"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="0.5434 km" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextAppearance.MaterialComponents.Headline5.DataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative_velocity"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextAppearance.MaterialComponents.Subtitle1.Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:relativeVelocity="@{asteroid.relativeVelocity}"
            tools:text="20.3 km/s" />

        <TextView
            android:id="@+id/textView7"
            style="@style/TextAppearance.MaterialComponents.Headline5.DataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_from_earth"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1.Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:distanceFromDistance="@{asteroid.distanceFromEarth}"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="0.33242 au" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>